--- a/templates/partials/content.html
+++ b/templates/partials/content.html
@@ -26,8 +26,12 @@
 									</a>
 								</div>
 								<div class="streamTitle">
-									<p class="date">29 June</p>
-									<p class="views">30000 views</p>
+									<div class="row cardRow">
+										<p class="date">29 June</p>
+										<p class="views">30000 views</p>
+									</div>
+									
+									<p class="artistName">3llie Stone</p>
 								</div>
 							</div>
 
@@ -44,8 +48,12 @@
 									</a>
 								</div>
 								<div class="streamTitle">
-									<p class="date">29 June</p>
-									<p class="views">30000 views</p>
+									<div class="row cardRow">
+										<p class="date">29 June</p>
+										<p class="views">30000 views</p>
+									</div>
+									
+									<p class="artistName">3llie Stone</p>
 								</div>
 							</div>
 							
@@ -62,8 +70,12 @@
 									</a>
 								</div>
 								<div class="streamTitle">
-									<p class="date">29 June</p>
-									<p class="views">30000 views</p>
+									<div class="row cardRow">
+										<p class="date">29 June</p>
+										<p class="views">30000 views</p>
+									</div>
+									
+									<p class="artistName">3llie Stone</p>
 								</div>
 							</div>
 							
