--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -27,6 +27,9 @@
 
 		</div>
 		<div class="upload">
+			<form action="#">
+				<input type="file" class="customFileUpload">
+			</form>
 			<!-- <a href="#" class="btn button">UPLOAD</a> -->
 		</div>
 		<!-- <div class="userProfile">profile</div> -->
