--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,6 +1,6 @@
 			<div class="navigation">
-				<a href="#" class="navItem">Streams</a>
-				<a href="#" class="navItem">upcoming</a>
+				<a href="/api/v1/users/all" class="navItem">API</a>
+				<a href="/api/v1/users/emails" class="navItem">EMAIL API</a>
 				<a href="#" class="navItem">gallery</a>
 				<a href="#" class="navItem">MixTapes</a>
 				<a href="#" class="navItem">Behind the band</a>
